# kapibara

./: .gitignore  .gitmodules  Cargo.toml  README.md
config/: client_example.yaml  config_example.json  config_example.yaml  server_example.yaml
src/: codec.rs  dispatch.rs  dns.rs  error.rs  inbound.rs  lib.rs  outbound.rs  route.rs
src/io/: copy.rs  mod.rs  timer.rs
src/stream/: mod.rs
